ready to deploy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/src/assets/img/logo/fav-logo1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ovro - Personal Portfolio Template</title>
+  <title>Hossein, AI Researcher</title>
 </head>
 <body class="body1">
 <div id="app"></div>
